--- a/README
+++ b/README
@@ -49,3 +49,6 @@ You will find screenshots on http://www.munin-mobile.com/screenshots/
 
 DEMO
 Demo can be found on http://demo.munin-mobile.com
+
+MUNIN MOBILE FOR 1.4.5
+Can be found on fork https://github.com/VvanGemert/munin-mobile
