Branched master to for-1.2.6

--- a/README
+++ b/README
@@ -48,3 +48,6 @@ Demo can be found on http://demo.munin-mobile.com
 
 MUNIN MOBILE FOR 1.4.5
 Can be found on fork https://github.com/VvanGemert/munin-mobile
+
+MUNIN MOBILE FOR 2.0
+Can be found in the main branch
