--- a/README
+++ b/README
@@ -51,3 +51,8 @@ Can be found on fork https://github.com/VvanGemert/munin-mobile
 
 MUNIN MOBILE FOR 2.0
 Can be found in the main branch
+
+MUNIN MOBILE LICENSE
+Munin Mobile is distrubuted under the GNU GPL version 2.  Munin Mobile 
+is copyrighted 2010-2012 by its various authors as identified in the 
+source files.
